# SignGlove

./: .cursorrules  .gitattributes  .gitignore  .gitmodules  DEVELOPMENT_PROPOSAL.md  DEVELOPMENT_PROPOSAL_OFFICIAL.md  Dockerfile  GITHUB_ISSUE_DRAFT.md  PROGRESS_REPORT.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  SIGNGLOVE_HW_CONTRIBUTION.md  TEAM_ROLES.md  TECHNICAL_CHALLENGES.md  UBUNTU_DEPLOYMENT.md  docker-compose.yml  pyproject.toml  setup.py  start_unified_server.py  test_arduino_system.py  test_inference_system.py
.github/workflows/: sync-external-repos.yml
collaborations/: README.md
collaborations/KLP-SignGlove/: .gitignore  README.md  best_improved_preprocessing_model.pth  project_structure.md  requirements.txt
collaborations/KLP-SignGlove/inference/: episode_full_data_demo.py  episode_inference.py  unified_inference.py  unified_realtime_demo.py
collaborations/KLP-SignGlove/integration/: README_CROSS_PLATFORM.md  linux_setup.sh  macos_setup.sh  signglove_client.py  test_integration.py  windows_setup.bat
collaborations/KLP-SignGlove/models/: deep_learning.py
collaborations/KLP-SignGlove/optimization/: onnx_optimization.py  quantization_pipeline.py
collaborations/KLP-SignGlove/preprocessing/: __init__.py  filters.py  normalization.py
collaborations/KLP-SignGlove/training/: cleanup_plan.md  cross_validation_results.json  cross_validation_training.py  dataset.py  ensemble_model_report.json  final_model_analysis.py  final_model_performance_report.json  optimization_summary.md  project_complete_summary.md  specialized_model_analysis.py  specialized_model_analysis_report.json
collaborations/SignGlove_HW/: EXPERIMENT_DESIGN.md  filter.md  flex_analysis.py  full_analysis.py  readh.py  sensor_transmit.ino  server.py
collaborations/SignGlove_HW/datasets/: .gitignore  README.md  csv_uart.py  csv_wifi.py  imu_flex_serial.ino  server.py
collaborations/SignGlove_HW/unified/: collection_progress.json  episode_20250819_152212_ㄱ.h5  episode_20250819_152220_ㄱ.h5  episode_20250819_152229_ㄱ.h5  episode_20250819_152238_ㄱ.h5  episode_20250819_152247_ㄱ.h5  episode_20250819_152256_ㄱ.h5  episode_20250819_152304_ㄱ.h5  episode_20250819_152313_ㄱ.h5  episode_20250819_152322_ㄱ.h5  episode_20250819_152331_ㄱ.h5  episode_20250819_152335_ㄱ.h5  episode_20250819_152508_ㄴ.h5  episode_20250819_152517_ㄴ.h5  episode_20250819_152526_ㄴ.h5  episode_20250819_152534_ㄴ.h5  episode_20250819_152543_ㄴ.h5  episode_20250819_152552_ㄴ.h5  episode_20250819_152601_ㄴ.h5  episode_20250819_152610_ㄴ.h5  episode_20250819_152619_ㄴ.h5  episode_20250819_152627_ㄴ.h5  episode_20250819_152628_ㄴ.h5  episode_20250819_152716_ㄷ.h5  episode_20250819_152725_ㄷ.h5  episode_20250819_152733_ㄷ.h5  episode_20250819_152742_ㄷ.h5  episode_20250819_152751_ㄷ.h5  episode_20250819_152800_ㄷ.h5  episode_20250819_152809_ㄷ.h5  episode_20250819_152817_ㄷ.h5  episode_20250819_152826_ㄷ.h5  episode_20250819_152835_ㄷ.h5  (+180 more)
config/: ubuntu.env.example
data/: stats.json
data/experiments/: ㄱ_20250726_205134.csv  ㄱ_20250726_205134.json
data/raw/: gesture_data_20250715.csv
data/splits/: test_20250726_210328.csv  train_20250726_210328.csv  val_20250726_210328.csv
data/stats/: dataset_stats_20250726_210328.json
data/unified/: 1_unified_20250726_210328.csv  master_dataset_20250726_210328.csv  ㄱ_unified_20250726_210327.csv  ㅏ_unified_20250726_210328.csv
dependencies/: external-repos.md  requirements.txt
deploy/: entrypoint.sh  healthcheck.py  signglove.service  supervisord.conf
docs/: PROJECT_OVERVIEW.md  PROJECT_STRUCTURE_PROPOSAL.md  README_SIGNGLOVE_UNIFIED.md  SENSOR_FUSION_GUIDE.md  external_repos.md
hardware/: README_DONGGEON.md  __init__.py
hardware/arduino/: signglove_firmware_template.ino  signglove_sensor_fusion.ino
hardware/donggeon/: README.md  __init__.py
scripts/: README.md  advanced_data_collector.py  csv_data_collector.py  data_collector.py  demo.py  demo_advanced_collector.py  demo_unified_collector.py  deploy_ubuntu.sh  import_external_signglove_hw.py  run_tests.py  setup_environment.py  setup_macos.sh  setup_ubuntu.sh  setup_windows.bat  signglove_unified_collector.py  start_server.py  test_data_collector.py  unified_data_collector.py
server/: data_storage.py  data_validation.py  inference_engine.py  ksl_classes.py  main.py  performance_monitor.py  preprocessing.py  professor_proxy.py  tts_engine.py  unified_server.py
server/models/: sensor_data.py
src/: arduino_interface.py  data_buffer.py  inference_engine.py  inference_node_system.py  integrated_inference_system.py  key_controlled_inference.py  korean_composition_algorithm.py
src/core/: __init__.py  integration_manager.py
src/integration/: __init__.py  api_gateway.py
tests/: dummy_data_generator.py  test_integration.py
tests/scenarios/: test_scenario_runner.py
(+633 files in other folders)
