[tool.poetry]
name = "signglove"
version = "1.0.0"
description = "수어 인식을 위한 스마트 글러브 시스템"
authors = ["이민우 <minwoo@signglove.com>"]
readme = "README.md"
packages = [{include = "server"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pandas = "^2.1.4"
numpy = "^1.25.2"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
validators = "^0.22.0"
python-dateutil = "^2.8.2"
typing-extensions = "^4.8.0"
httpx = "^0.25.2"
requests = "^2.31.0"
pyserial = "^3.5"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
pywin32 = {version = "^306", markers = "sys_platform == 'win32'"}
psutil = "^5.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.12.0"
factory-boy = "^3.3.0"
faker = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-server = "server.main:start_server"
test-dummy = "tests.dummy_data_generator:main"
donggeon-wifi = "hardware.donggeon.client.wifi_data_client:main"
donggeon-uart = "hardware.donggeon.client.uart_data_client:main"
donggeon-tcp-server = "hardware.donggeon.server.simple_tcp_server:main"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=server --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "scipy.*",
    "sklearn.*",
    "serial.*",
    "win32com.*",
    "psutil.*"
]
ignore_missing_imports = true 